--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "node-js-getting-started",
+  "name": "node-js-heroku-hello-world",
   "version": "0.1.5",
   "description": "A sample Node.js app using Express 4",
   "main": "index.js",
